Committing what is here